# nrf-radio

./: Cargo.toml  README.md  build  build.rs  memory-nrf52840-dk.x  memory-nrf52840-dongle.x  memory.x
.cargo/: config.toml
src/: main.rs  mono.rs
