[package]
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2021"
readme = "README.md"
name = "nrf_radio"
version = "0.1.0"


[features]
nrf52840 = []

default = ["nrf52840_dongle"]
# default = ["nrf52840_dk"]

nrf52840_dongle = ["nrf52840", "nrf52840-hal"]
nrf52840_dk = ["nrf52840", "nrf52840-hal"]

[dependencies.nrf52840-hal]
optional = true
version = "0.15"
features = ["rt"]


[dependencies]
alloc-cortex-m = "0.4"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
embedded-hal = "0.2"
fugit = "0.3"
no-std-compat = { version = "0.4", features = ["alloc"] }
panic-halt = "0.2"
usb-device = "0.2"
usbd-serial = "0.1"

# nrf-usbd = "0.1"
# rtic-monotonic = "1.0"
# systick-monotonic = "1"


# this lets you use `cargo fix`!
[[bin]]
name = "nrf_radio"

test = false
bench = false

# identical profiles haha

[profile.release]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

[profile.dev]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
